draft-ietf-dhc-dhcpv6-redundancy-consider-02

--- a/draft-ietf-dhc-dhcpv6-redundancy-consider-02.html
+++ b/draft-ietf-dhc-dhcpv6-redundancy-consider-02.html
@@ -404,7 +404,7 @@
 <td class="right">J.F. Tremblay</td>
 </tr>
 <tr>
-<td class="left">Expires: February 13, 2012</td>
+<td class="left">Expires: May 03, 2012</td>
 <td class="right">Videotron Ltd.</td>
 </tr>
 <tr>
@@ -425,7 +425,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">August 12, 2011</td>
+<td class="right">October 31, 2011</td>
 </tr>
 
     	
@@ -433,7 +433,7 @@
   </table>
 
   <p class="title">DHCPv6 Redundancy Deployment Considerations<br />
-  <span class="filename">draft-ietf-dhc-dhcpv6-redundancy-consider-01</span></p>
+  <span class="filename">draft-ietf-dhc-dhcpv6-redundancy-consider-02</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document documents some deployment considerations for those who wishing to use DHCPv6 to support their deployment of IPv6. Specifically, providing semi-redundant DHCPv6 services is discussed in this document.</p>
@@ -441,7 +441,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on February 13, 2012.</p>
+<p>This Internet-Draft will expire on May 03, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -518,13 +518,13 @@
 
 <ol>
 <li>The service provider edge routers and access routers (CMTS for cable or DSLAM/BRAS for DSL for example) are IPv6 enabled when required.</li>
-<li>CPE devices are instructed to perform stateful DHCPv6 to request atleast one IPv6 address, delegated prefix, and or configuration information. CPE devices may also be instructed to leverage stateless DHCPv6 <a href="#RFC3736">[RFC3736]</a> to acquire configuration information only. This assumes that IPv6 address and prefix information has been acquired using other means.</li>
+<li>CPE devices are instructed to perform stateful DHCPv6 to request at least one IPv6 address, delegated prefix, and or configuration information. CPE devices may also be instructed to leverage stateless DHCPv6 <a href="#RFC3736">[RFC3736]</a> to acquire configuration information only. This assumes that IPv6 address and prefix information has been acquired using other means.</li>
 <li>The primary application of this BCP is for native IPv6 services. Use and applicability to transition mechanisms is out of scope for this document.</li>
 <li>CPE devices must implement a stateful DHCPv6 client <a href="#RFC3315">[RFC3315]</a>, support for DHCPv6 prefix delegation <a href="#RFC3633">[RFC3633]</a> or stateless DHCPv6 <a href="#RFC3736">[RFC3736]</a> may also be implemented.</li>
 </ol>
 <h1 id="rfc.section.2.2">
 <a href="#rfc.section.2.2">2.2.</a> Enterprise model</h1>
-<p id="rfc.section.2.2.p.1">The enterprise model represents cases, where end-user devices are most often configured directly, without any intermediate devices (like home routers used in service provider model). However, enterprise IPv6 environments quite often use or require that DHCPv6 relay agents are in place to support the use of DHCPv6 for the acquisition of IPv6 addresses and or configuration information. The assumptions here extend those that are defined in the beginning of <a href="#assumptions">Section 2</a>:</p>
+<p id="rfc.section.2.2.p.1">The enterprise model represents cases where end-user devices are most often configured directly without any intermediate devices (like home routers used in service provider model). However enterprise IPv6 environments quite often use or require that DHCPv6 relay agents are in place to support the use of DHCPv6 for the acquisition of IPv6 addresses and or configuration information. The assumptions here extend those that are defined in the beginning of <a href="#assumptions">Section 2</a>:</p>
 
 <ol>
 <li>DHCPv6 clients are hosts and are considered end nodes. Examples of such clients include computers, laptops, and possibily mobile devices.</li>
@@ -550,8 +550,9 @@
 </h1>
 <p id="rfc.section.4.1.p.1">In the split prefixes model, each DHCPv6 server is configured with a unique, non-overlapping range derived from the /64 prefix deployed for use within an IPv6 network. Distribution between two servers, for example, would require that an allocated /64 be split in two /65 ranges.  2001:db8:1:0001:0000::/65 and 2001:db8:1:0001:8000::/65 would be assigned to each DHCPv6 server for allocation to clients derived from 2001:db8:1:0001::/64 prefix.  </p>
 <p id="rfc.section.4.1.p.2">Each DHCP server allocates IPv6 addresses from the corresponding ranges per device class. Each DHCPv6 server will be simultaneously active and operational. Address allocation is governed largely through the use of the DHCPv6 preference option, so server with higher preference value is always prefered. Additional proprietary mechanisms can be leveraged to further enforce the favoring of one DHCP server over another. Example of such scenario is presented in <a href="#example-1">Figure 1</a>.</p>
-<p id="rfc.section.4.1.p.3">It is important to note that over time, it is possible that bindings may be disproportionally distributed amongst DHCPv6 servers and not any one server will be authoritative for all bindings. Per <a href="#RFC3315">[RFC3315]</a>, a DHCPv6 ADVERTISE messages with a preference option of 255 is an indicator to a DHCPv6 client to immediately begin a client-initiated message exchange by transmitting a REQUEST message. Alternatively, a DHCPv6 ADVERTISE messages with a preference option of any value lesser than 255 or is absent is an indicator to the client that it must wait for subsequent ADVERTISE messages (for a specified period of time) before proceeding.  Additionally, in the event of a DHCPv6 server failure it is desirable for a server other than the server that originally responded to be able to rebind the client. It is not critical, that the DHCPv6 server be able to rebind the client in this scenario, however, this is generally desirable behavior. Given the proposed architecture, the remaining active DHCPv6 server will have a different range configured making it technically incorrect for the same to rebind the client in its current state. Ultimately, when rebinding fails the client will acquire a new binding from the configured range unique to an active server.  Furthermore, shorter T1, T2, valid, and preferred lifetimes can be used to reduce the possibility that a client or some other element on the network will experience a disruption in service or access to relevant binding data.  The values used for T2, preferred and valid lifetime can be adjusted or configured to minimize service disruption.  Ideally T2, preferred and valid lifetimes that are equal or near equal can be used to trigger a DHCPv6 client to reacquire IPv6 address, prefix, and or configuration information almost immediately after rebinding fails.  It is important to note that shorter values will most certainly create additional load and processing for the DHCPv6 server, which must be considered.</p>
-<p id="rfc.section.4.1.p.4">Using a split prefix configuration model dynamic updates to DNS can be coordinated to ensure that the DNS is properly updated with current binding information.  Challenges arise with regards to the update of PTR for IPv6 addresses since the DNS may need to be overwritten in a failure condition.  The use of a split prefixes enables the differentiation of bindings and binding timing to determine which represents the current state.  This becomes particularly important when DHCPv6 Leasequery <a href="#RFC5007">[RFC5007]</a> and/or DHCPv6 Bulk Leasequery <a href="#RFC5460">[RFC5460]</a> are leveraged to determine lease or binding state.  An additional benefit is that the use of separate ranges per DHCPv6 server makes failure conditions more obvious and detectable.</p>
+<p id="rfc.section.4.1.p.3">It is important to note that over time, it is possible that bindings may be disproportionally distributed amongst DHCPv6 servers and not any one server will be authoritative for all bindings.</p>
+<p id="rfc.section.4.1.p.4">Per <a href="#RFC3315">[RFC3315]</a>, a DHCPv6 ADVERTISE messages with a preference option of 255 is an indicator to a DHCPv6 client to immediately begin a client-initiated message exchange by transmitting a REQUEST message. Alternatively, a DHCPv6 ADVERTISE messages with a preference option of any value lesser than 255 or absent preference option is an indicator to the client that it must wait for subsequent ADVERTISE messages before proceeding, as defined in Section 17.1.2 of <a href="#RFC3315">[RFC3315]</a>.  Additionally, in the event of a DHCPv6 server failure it is desirable for a server other than the server that originally responded to be able to rebind the client. It is not critical, that the DHCPv6 server be able to rebind the client in this scenario, however, this is generally desirable behavior. Given the proposed architecture, the remaining active DHCPv6 server will have a different range configured making it technically incorrect for the same to rebind the client in its current state. Ultimately, when rebinding fails the client will acquire a new binding from the configured range unique to an active server.  Furthermore, shorter T1, T2, valid, and preferred lifetimes can be used to reduce the possibility that a client or some other element on the network will experience a disruption in service or access to relevant binding data.  The values used for T2, preferred and valid lifetime can be adjusted or configured to minimize service disruption.  Ideally T2, preferred and valid lifetimes that are equal or near equal can be used to trigger a DHCPv6 client to reacquire IPv6 address, prefix, and or configuration information almost immediately after rebinding fails.  It is important to note that shorter values will most certainly create additional load and processing for the DHCPv6 server, which must be considered.</p>
+<p id="rfc.section.4.1.p.5">Using a split prefix configuration model dynamic updates to DNS can be coordinated to ensure that the DNS is properly updated with current binding information.  Challenges arise with regards to the update of PTR for IPv6 addresses since the DNS may need to be overwritten in a failure condition.  The use of a split prefixes enables the differentiation of bindings and binding timing to determine which represents the current state.  This becomes particularly important when DHCPv6 Leasequery <a href="#RFC5007">[RFC5007]</a> and/or DHCPv6 Bulk Leasequery <a href="#RFC5460">[RFC5460]</a> are leveraged to determine lease or binding state.  An additional benefit is that the use of separate ranges per DHCPv6 server makes failure conditions more obvious and detectable.</p>
 <div id="#rfc.figure.1"></div>
 <div id="#example-1"></div>
 <pre>
@@ -592,7 +593,7 @@ vary based on range definition
 <p>Split prefixes approach.</p>
 <h1 id="rfc.section.4.2">
 <a href="#rfc.section.4.2">4.2.</a> Multiple Unique Prefixes</h1>
-<p id="rfc.section.4.2.p.1">In multiple prefix model, each DHCPv6 server is configured with a unique, non-overlapping range derived from multiple unique prefixes deployed for use within an IPv6 network.  Distribution between two servers, for example, would require that a /64 range be configured from an allocated from unique /64 prefixes. For example, the range 2001:db8:1:0001::/64 would be assigned to a single DHCPv6 server for allocation to clients derived from 2001:db8:1:0001::/64 prefix, subsequently the 2001:db8:1:0001:1000::/64 from the prefix 2001:db8:1:0001:1000::/64 could be used by a second DHCP server. This would be repeated for each active DHCP server. Example of this scenario is presented in <a href="#example-2">Figure 2</a>.</p>
+<p id="rfc.section.4.2.p.1">In the multiple prefix model, each DHCPv6 server is configured with a unique, non-overlapping prefix. A /64 range equal to the prefix is configured on each server. For example, the range 2001:db8:1:0000::/64 would be assigned to a single DHCPv6 server for allocation to clients equal to its parent prefix 2001:db8:1:0000::/64.  Subsequently the second DHCPv6 server could use 2001:db8:1:0001:::/64 as range and prefix.  This would be repeated for each active DHCP server.  Example of this scenario is presented in <a href="#example-2">Figure 2</a>.</p>
 <p id="rfc.section.4.2.p.2">This approach uses a unique prefix and ultimately range per DHCPv6 server with corresponding prefixes configured for use in the network.  The corresponding network infrastructure must in turn be configured to use multiple prefixes on the inteface(s) facing the DHCPv6 client. The configuration is similar on all the servers, but a different prefix and a different preference is used per DHCPv6 server.</p>
 <p id="rfc.section.4.2.p.3">This approach would drastically increase the rate of consumption of IPv6 prefixes and would also yield operational and management challenges related to the underlying network since a significantly higher number of prefixes would need to be configured and routed. This approach also does not provide a clean migration path to the desired solution leveraging a standards-based DHCPv6 redundancy or failover protocol, which of course has yet to be specified.</p>
 <p id="rfc.section.4.2.p.4">The use of multiple unique prefixes provides benefits similar to those referred to in <a href="#split-prefixes">Section 4.1</a> related to dynamic updates to DNS.  The use of multiple unique prefixes enables the differentiation of bindings and binding timing to determine which represents the current state.  This becomes particularly important when DHCPv6 Leasequery <a href="#RFC5007">[RFC5007]</a> and/or DHCPv6 Bulk Leasequery <a href="#RFC5460">[RFC5460]</a> are leveraged to determine lease or binding state.  The use of separate prefixes and ranges per DHCPv6 server makes failure conditions more obvious and detectable.</p>
@@ -683,6 +684,7 @@ Preference=(&gt;0 and &lt;255)
 <p></p>
 
 <ul>
+<li>In indentical prefixes scenario, both servers must follow the same address allocation procedure, i.e. they both must use the same algorithm and the same policy to determine which address is going to be assigned to a specific client. Otherwise there is a distinct chance that each server will assign the same address to two different clients.</li>
 <li>Interactions with DNS server(s) to support the dynamic update of the same address when one or more DHCPv6 servers have become unavailable. This specifically becomes a challenge when or if nodes that were initially granted a lease: <ol>
 <li>Attempt to renew or rebind the lease originally granted, or</li>
 <li>Attempt to obtain a new lease</li>
@@ -708,8 +710,8 @@ Preference=(&gt;0 and &lt;255)
 <p id="rfc.section.7.p.1">Security considerations specific to the operation of the DHCPv6 protocol are created through the use of this interim architecture for DHCPv6 redundancy beyond what has been cited for Dynamic Host Configuration Protocol for IPv6 (DHCPv6) <a href="#RFC3315">[RFC3315]</a>.  There are considerations related to DNS, specifically the dynamic updating of DNS, when such models are employed. Potential opportunities are created to overwrite valid DNS resource records when provisions have been made accommodate some of the models cited in this document. In some cases this is desirable to ensure that DNS remains up to date when using one or more of these models, however, abuse of the same could result in undesirable behavior.</p>
 <h1 id="rfc.section.8">
 <a href="#rfc.section.8">8.</a> Acknowledgements</h1>
-<p id="rfc.section.8.p.1">Many thanks to Bernie Volz, Kim Kinnear, Ralph Droms, Bernie Volz and David Hankins for their	input and review.</p>
-<p id="rfc.section.8.p.2">This work has been partially supported by Gdansk University of Technology.</p>
+<p id="rfc.section.8.p.1">Many thanks to Bernie Volz, Kim Kinnear, Ralph Droms, David Hankins and Chuck Anderson for their input and review.</p>
+<p id="rfc.section.8.p.2">This work has been partially supported by Department of Computer Communications (a division of Gdansk University of Technology) and the Polish Ministry of Science and Higher Education under the European Regional Development Fund, Grant No. POIG.01.01.02-00-045/09-00 (Future Internet Engineering Project).</p>
 <h1 id="rfc.references">
 <a href="#rfc.references">9.</a> References</h1>
 <h1 id="rfc.references.1">
@@ -813,11 +815,11 @@ Preference=(&gt;0 and &lt;255)
 	  <span class="vcardline">
 		<span class="locality">Montreal</span>,  
 		<span class="region">Quebec</span> 
-		<span class="code">H3C 4M8i</span>
+		<span class="code">H3C 4M8</span>
 	  </span>
 	  <span class="country-name vcardline">Canada</span>
 	</span>
-	<span class="vcardline">EMail: <a href="mailto:Jean-Francois.TremblayING@videotron.com">Jean-Francois.TremblayING@videotron.com</a></span>
+	<span class="vcardline">EMail: <a href="mailto:jf@jftremblay.com">jf@jftremblay.com</a></span>
 
   </address>
 </div><div class="avoidbreak">
