draft-ietf-softwire-dslite-radius-ext-07

--- a/draft-ietf-softwire-dslite-radius-ext-07.html
+++ b/draft-ietf-softwire-dslite-radius-ext-07.html
@@ -396,12 +396,12 @@
 <td class="right">A. Durand</td>
 </tr>
 <tr>
-<td class="left">Expires: March 02, 2012</td>
+<td class="left">Expires: April 19, 2012</td>
 <td class="right">Juniper Networks</td>
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">August 30, 2011</td>
+<td class="right">October 17, 2011</td>
 </tr>
 
     	
@@ -409,7 +409,7 @@
   </table>
 
   <p class="title">RADIUS Extensions for Dual-Stack Lite<br />
-  <span class="filename">draft-ietf-softwire-dslite-radius-ext-06</span></p>
+  <span class="filename">draft-ietf-softwire-dslite-radius-ext-07</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>Dual-Stack Lite is a solution to offer both IPv4 and IPv6 connectivity to customers which are addressed only with an IPv6 prefix.  Dual-Stack Lite requires to pre-configure the Dual-Stack Lite Address Family Transition Router (AFTR) tunnel information on the Basic Bridging BroadBand (B4) element. In many networks, the customer profile information may be stored in Authentication Authorization and Accounting (AAA) servers while client configurations are mainly provided through Dynamic Host Configuration Protocol (DHCP). This document specifies a new Remote Authentication Dial In User Service (RADIUS) attribute to carry Dual-Stack Lite Address Family Transition Router Tunnel name; the RADIUS attribute is defined based on the equivalent DHCPv6 OPTION_AFTR_NAME option. This RADIUS attribute is meant to be used between the RADIUS Server and the Network Access Server (NAS), it is not intended to be used directly between the Basic Bridging BroadBand element and the RADIUS Server.</p>
@@ -417,7 +417,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on March 02, 2012.</p>
+<p>This Internet-Draft will expire on April 19, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -533,7 +533,7 @@
 <p id="rfc.section.3.p.7">In the scenario depicted in <a href="#fig2">Figure 2</a> the Access-Request packet contains a Service-Type attribute with the value Authorize Only (17), thus according to <a href="#RFC5080">[RFC5080]</a> the Access-Request packet MUST contain a State attribute.</p>
 <p id="rfc.section.3.p.8">After receiving the DS-Lite-Tunnel-Name in the initial Access-Accept the NAS MUST store the received AFTR Tunnel Name locally. When the B4 sends a DHCPv6 Renew message to request an extension of the lifetimes for the assigned address or prefix, the NAS does not have to initiate a new Access-Request towards the AAA server to request the AFTR tunnel name. The NAS retrieves the previously stored AFTR tunnel name and uses it in its reply.</p>
 <p id="rfc.section.3.p.9">According to <a href="#RFC3315">[RFC3315]</a> if the DHCPv6 server to which the DHCPv6 Renew message was sent at time T1 has not responded, the DHCPv6 client initiates a Rebind/Reply message exchange with any available server. In this scenario the NAS receiving the DHCPv6 rebind message MUST initiate a new Access-Request towards the AAA server. The NAS MAY include the DS-Lite-Tunnel-Name attribute in its Access-Request.</p>
-<p id="rfc.section.3.p.10">If the NAS does not receive the DS-Lite-Tunnel-Name attribute in the Access-Accept it MAY fallback to a pre-configured default tunnel name, if any. If the NAS does not have any pre-configured default tunnel name or if the NAS receives an Access-Reject, the IPv4 over IPv6 tunnel cannot be established, thus the B4 element has only IPv6 connectivity.  </p>
+<p id="rfc.section.3.p.10">If the NAS does not receive the DS-Lite-Tunnel-Name attribute in the Access-Accept it MAY fallback to a pre-configured default tunnel name, if any. If the NAS does not have any pre-configured default tunnel name or if the NAS receives an Access-Reject, the IPv4 over IPv6 tunnel cannot be established, thus the B4 element has only IPv6 connectivity.</p>
 <h1 id="rfc.section.4">
 <a href="#rfc.section.4">4.</a> <a href="#Attrib" id="Attrib">RADIUS Attribute</a>
 </h1>
@@ -643,7 +643,7 @@
 <h1 id="rfc.section.6">
 <a href="#rfc.section.6">6.</a> <a href="#seccons" id="seccons">Security Considerations</a>
 </h1>
-<p id="rfc.section.6.p.1">This document has no additional security considerations beyond those already identified in <a href="#RFC2865">[RFC2865]</a></p>
+<p id="rfc.section.6.p.1">This document has no additional security considerations beyond those already identified in <a href="#RFC2865">[RFC2865]</a> for RADIUS protocol and in <a href="#RFC5176">[RFC5176]</a> for CoA messages.</p>
 <p><a href="#RFC6333">[RFC6333]</a> discusses Dual-Stack Lite related security issues.</p>
 <h1 id="rfc.section.7">
 <a href="#rfc.section.7">7.</a> <a href="#IANA" id="IANA">IANA Considerations</a>
