draft-ietf-v6ops-rogue-ra-01

--- a/draft-ietf-v6ops-rogue-ra-01.html
+++ b/draft-ietf-v6ops-rogue-ra-01.html
@@ -8,7 +8,7 @@
         body {
                 font-family: verdana, charcoal, helvetica, arial, sans-serif;
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		color: #000; background-color: #FFF;
                 margin: 2em;
         }
@@ -84,11 +84,11 @@
         p { margin-left: 2em; margin-right: 2em; }
         p.copyright { font-size: x-small; }
         p.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; margin-left: 3em; }
         table.toc { margin: 0 0 0 3em; padding: 0; border: 0; vertical-align: text-top; }
         td.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; vertical-align: text-top; }
 
         ol.text { margin-left: 2em; margin-right: 2em; }
@@ -121,7 +121,7 @@
         /* RFC-2629 <texttable>s. */
         table.all, table.full, table.headers, table.none {
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		text-align: center; border-width: 2px;
                 vertical-align: top; border-collapse: collapse;
         }
@@ -153,55 +153,10 @@
 <tr><td class="header">IPv6 Operations</td><td class="header">T. Chown</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">University of Southampton</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">S. Venaas</td></tr>
-<tr><td class="header">Expires: November 28, 2009</td><td class="header">UNINETT</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">May 27, 2009</td></tr>
+<tr><td class="header">Expires: December 9, 2010</td><td class="header">UNINETT</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">June 7, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Rogue IPv6 Router Advertisement Problem Statement<br />draft-ietf-v6ops-rogue-ra-00</h1>
-
-<h3>Status of this Memo</h3>
-<p>
-This Internet-Draft is submitted to IETF in full
-conformance with the provisions of BCP&nbsp;78 and BCP&nbsp;79.
-This document may contain material from IETF Documents or IETF
-Contributions published or made publicly available before November
-10, 2008. The person(s) controlling the copyright in some of this
-material may not have granted the IETF Trust the right to allow
-modifications of such material outside the IETF Standards Process.
-Without obtaining an adequate license from the person(s) controlling
-the copyright in such materials, this document may not be modified
-outside the IETF Standards Process, and derivative works of it may
-not be created outside the IETF Standards Process, except to format
-it for publication as an RFC or to translate it into languages other
-than English.</p>
-<p>
-Internet-Drafts are working documents of the Internet Engineering
-Task Force (IETF), its areas, and its working groups.
-Note that other groups may also distribute working documents as
-Internet-Drafts.</p>
-<p>
-Internet-Drafts are draft documents valid for a maximum of six months
-and may be updated, replaced, or obsoleted by other documents at any time.
-It is inappropriate to use Internet-Drafts as reference material or to cite
-them other than as &ldquo;work in progress.&rdquo;</p>
-<p>
-The list of current Internet-Drafts can be accessed at
-<a href='http://www.ietf.org/ietf/1id-abstracts.txt'>http://www.ietf.org/ietf/1id-abstracts.txt</a>.</p>
-<p>
-The list of Internet-Draft Shadow Directories can be accessed at
-<a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
-<p>
-This Internet-Draft will expire on November 28, 2009.</p>
-
-<h3>Copyright Notice</h3>
-<p>
-Copyright (c) 2009 IETF Trust and the persons identified as the
-document authors.  All rights reserved.</p>
-<p>
-This document is subject to BCP 78 and the IETF Trust's Legal
-Provisions Relating to IETF Documents in effect on the date of
-publication of this document (http://trustee.ietf.org/license-info).
-Please review these documents carefully, as they describe your
-rights and restrictions with respect to this document.</p>
+<h1><br />Rogue IPv6 Router Advertisement Problem Statement<br />draft-ietf-v6ops-rogue-ra-01</h1>
 
 <h3>Abstract</h3>
 
@@ -222,7 +177,51 @@ problem.   We focus on the unintended causes of rogue RAs in the text.
 The goal of this text is to be Informational, and as such
 to present a framework around which solutions can be proposed and discussed.
 
-</p><a name="toc"></a><br /><hr />
+</p>
+<h3>Status of this Memo</h3>
+<p>
+This Internet-Draft is submitted  in full
+conformance with the provisions of BCP&nbsp;78 and BCP&nbsp;79.</p>
+<p>
+Internet-Drafts are working documents of the Internet Engineering
+Task Force (IETF).  Note that other groups may also distribute
+working documents as Internet-Drafts.  The list of current
+Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
+<p>
+Internet-Drafts are draft documents valid for a maximum of six months
+and may be updated, replaced, or obsoleted by other documents at any time.
+It is inappropriate to use Internet-Drafts as reference material or to cite
+them other than as &ldquo;work in progress.&rdquo;</p>
+<p>
+This Internet-Draft will expire on December 9, 2010.</p>
+
+<h3>Copyright Notice</h3>
+<p>
+Copyright (c) 2010 IETF Trust and the persons identified as the
+document authors.  All rights reserved.</p>
+<p>
+This document is subject to BCP 78 and the IETF Trust's Legal
+Provisions Relating to IETF Documents
+(http://trustee.ietf.org/license-info) in effect on the date of
+publication of this document.  Please review these documents
+carefully, as they describe your rights and restrictions with respect
+to this document. Code Components extracted from this document must
+include Simplified BSD License text as described in Section 4.e of
+the Trust Legal Provisions and are provided without warranty as
+described in the Simplified BSD License.</p>
+<p>
+This document may contain material from IETF Documents or IETF
+Contributions published or made publicly available before November
+10, 2008.  The person(s) controlling the copyright in some of this
+material may not have granted the IETF Trust the right to allow
+modifications of such material outside the IETF Standards Process.
+Without obtaining an adequate license from the person(s) controlling
+the copyright in such materials, this document may not be modified
+outside the IETF Standards Process, and derivative works of it may
+not be created outside the IETF Standards Process, except to format
+it for publication as an RFC or to translate it into languages other
+than English.</p>
+<a name="toc"></a><br /><hr />
 <h3>Table of Contents</h3>
 <p class="toc">
 <a href="#anchor1">1.</a>&nbsp;
@@ -477,7 +476,7 @@ It should be possible to implement 'RA snooping' in Layer 2 switches in
 a similar way to DHCP snooping, such that RAs observed from incorrect
 sources are blocked or dropped, and not propagated through a subnet.
 One candidate solution in this space called RA-Guard
-<a class='info' href='#I-D.ietf-v6ops-ra-guard'>[I&#8209;D.ietf&#8209;v6ops&#8209;ra&#8209;guard]<span> (</span><span class='info'>Levy-Abegnoli, E., Velde, G., Popoviciu, C., and J. Mohacsi, &ldquo;IPv6 RA-Guard,&rdquo; November&nbsp;2009.</span><span>)</span></a> has been proposed.
+<a class='info' href='#I-D.ietf-v6ops-ra-guard'>[I&#8209;D.ietf&#8209;v6ops&#8209;ra&#8209;guard]<span> (</span><span class='info'>Levy-Abegnoli, E., Velde, G., Popoviciu, C., and J. Mohacsi, &ldquo;IPv6 RA-Guard,&rdquo; May&nbsp;2010.</span><span>)</span></a> has been proposed.
 This type of solution has appeal because it is a familiar model for
 enterprise network managers, but it can also be used to complement SeND,
 by a switch acting as a SeND proxy for hosts.
@@ -665,8 +664,8 @@ Use Layer 2 Partitioning</h3>
 <p>
 If each system or user on a network is partitioned into a different
 Layer 2 medium, then the impact of rogue RAs can be limited.   In
-broadband networks RFC1483 bridging 
-<a class='info' href='#RFC1483'>[RFC1483]<span> (</span><span class='info'>Heinanen, J., &ldquo;Multiprotocol Encapsulation over ATM Adaptation Layer 5,&rdquo; July&nbsp;1993.</span><span>)</span></a> may be available, for example.
+broadband networks RFC2684 bridging 
+<a class='info' href='#RFC2684'>[RFC2684]<span> (</span><span class='info'>Grossman, D. and J. Heinanen, &ldquo;Multiprotocol Encapsulation over ATM Adaptation Layer 5,&rdquo; September&nbsp;1999.</span><span>)</span></a> may be available, for example.
 The benefit may be scenario-specific, e.g. whether a given user or
 customer has their own network prefix or whether the provisioning is
 in a shared subnet or link.   It is certainly desirable that any given
@@ -733,8 +732,8 @@ Scenarios and mitigations</h3>
 <p>
 In this section we summarise the scenarios and practical
 mitigations described
-above in a summary matrix.   We consider, for the case of a rogue 
-multicast RA, which of the mitigation methods protects against each
+above in a matrix format.   We consider, for the case of a rogue 
+multicast RA, which of the mitigation methods helps protect against each
 cause.   For the administrator error, we discount an error in
 configuring the countermeasure itself, rather we consider an
 administrator error to be an error in configuration elsewhere
@@ -1028,8 +1027,8 @@ Dan White.
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <h3>10.&nbsp;Informative References</h3>
 <table width="99%" border="0">
-<tr><td class="author-text" valign="top"><a name="RFC1483">[RFC1483]</a></td>
-<td class="author-text"><a href="mailto:Juha.Heinanen@datanet.tele.fi">Heinanen, J.</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc1483">Multiprotocol Encapsulation over ATM Adaptation Layer 5</a>,&rdquo; RFC&nbsp;1483, July&nbsp;1993 (<a href="http://www.rfc-editor.org/rfc/rfc1483.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC2684">[RFC2684]</a></td>
+<td class="author-text"><a href="mailto:dan@dma.isg.mot.com">Grossman, D.</a> and <a href="mailto:jh@telia.fi">J. Heinanen</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc2684">Multiprotocol Encapsulation over ATM Adaptation Layer 5</a>,&rdquo; RFC&nbsp;2684, September&nbsp;1999 (<a href="http://www.rfc-editor.org/rfc/rfc2684.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3056">[RFC3056]</a></td>
 <td class="author-text">Carpenter, B. and K. Moore, &ldquo;<a href="http://tools.ietf.org/html/rfc3056">Connection of IPv6 Domains via IPv4 Clouds</a>,&rdquo; RFC&nbsp;3056, February&nbsp;2001 (<a href="http://www.rfc-editor.org/rfc/rfc3056.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3315">[RFC3315]</a></td>
@@ -1047,7 +1046,7 @@ Dan White.
 <tr><td class="author-text" valign="top"><a name="RFC4862">[RFC4862]</a></td>
 <td class="author-text">Thomson, S., Narten, T., and T. Jinmei, &ldquo;<a href="http://tools.ietf.org/html/rfc4862">IPv6 Stateless Address Autoconfiguration</a>,&rdquo; RFC&nbsp;4862, September&nbsp;2007 (<a href="http://www.rfc-editor.org/rfc/rfc4862.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.ietf-v6ops-ra-guard">[I-D.ietf-v6ops-ra-guard]</a></td>
-<td class="author-text">Levy-Abegnoli, E., Velde, G., Popoviciu, C., and J. Mohacsi, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-v6ops-ra-guard-04.txt">IPv6 RA-Guard</a>,&rdquo; draft-ietf-v6ops-ra-guard-04 (work in progress), November&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-v6ops-ra-guard-04.txt">TXT</a>).</td></tr>
+<td class="author-text">Levy-Abegnoli, E., Velde, G., Popoviciu, C., and J. Mohacsi, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-v6ops-ra-guard-05.txt">IPv6 RA-Guard</a>,&rdquo; draft-ietf-v6ops-ra-guard-05 (work in progress), May&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-v6ops-ra-guard-05.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.nward-ipv6-autoconfig-filtering-ethernet">[I-D.nward-ipv6-autoconfig-filtering-ethernet]</a></td>
 <td class="author-text">Ward, N., &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-nward-ipv6-autoconfig-filtering-ethernet-00.txt">IPv6 Autoconfig Filtering on Ethernet Switches</a>,&rdquo; draft-nward-ipv6-autoconfig-filtering-ethernet-00 (work in progress), March&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-nward-ipv6-autoconfig-filtering-ethernet-00.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.droms-dhc-dhcpv6-default-router">[I-D.droms-dhc-dhcpv6-default-router]</a></td>
